--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,21 @@
 <div class="container-full">
     <div class="login col-6 offset-3">
-        <form>
+        <form #ngForm='ngForm'>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" name="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email" required minlength="2">
+                <input type="email" #email="ngModel" [(ngModel)]='user.email' name="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email" required email />
+
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                <!-- <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
-                    <div *ngIf="name.errors.required">
-                        Name is required.
-                    </div>
-                    <div *ngIf="name.errors.minlength">
-                        Name must be at least 3 characters long.
-                    </div>
-                    <div *ngIf="name.errors.forbiddenName">
-                        Name cannot be Bob.
-                    </div>
+                <div *ngIf="email.invalid && (email.dirty ||email.touched)" class="alert alert-danger">
 
-                </div> -->
+                    <div *ngIf="email.errors.required">
+                        邮箱不能为空.
+                    </div>
+                    <div *ngIf="!email.errors.required && email.errors.email">
 
+                        邮箱格式错误.
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
