--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="login col-6 offset-3">
         <form #ngForm='ngForm'>
             <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
+                <label for="exampleInputEmail1">邮箱：</label>
                 <input type="email" #email="ngModel" [(ngModel)]='user.email' name="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email" required email />
 
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
@@ -18,8 +18,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="exampleInputPassword1">密码：</label>
+                <input type="password" class="form-control" id="password" [(ngModel)]="user.password" placeholder="Password" #password="ngModel" name="password" required minlength="6">
+                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+                    <div *ngIf="password.errors.required">密码不能为空.</div>
+                    <div *ngIf="password.errors.minlenght">密码长度不能小于6个字符.</div>
+
+
+                </div>
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck">
