--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,37 +1,38 @@
 <div class="container-full">
     <div class="login col-6 offset-3">
-        <form #ngForm='ngForm'>
+        <form [formGroup]='userGroup'>
             <div class="form-group">
-                <label for="exampleInputEmail1">邮箱：</label>
-                <input type="email" #email="ngModel" [(ngModel)]='user.email' name="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email" required email />
-
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" formControlName="email" name="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email" />
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                <div *ngIf="email.invalid && (email.dirty ||email.touched)" class="alert alert-danger">
-
-                    <div *ngIf="email.errors.required">
+                <div *ngIf="userGroup.get('email').invalid && (userGroup.get('email').dirty ||userGroup.get('email').touched)" class="alert alert-danger">
+                    <div *ngIf="userGroup.get('email').hasError('required')">
                         邮箱不能为空.
                     </div>
-                    <div *ngIf="!email.errors.required && email.errors.email">
-
+                    <div *ngIf="!userGroup.get('email').hasError('required')&&userGroup.get('email').hasError('email') ">
                         邮箱格式错误.
                     </div>
+                    <div *ngIf="!userGroup.get('email').hasError('required')&&!userGroup.get('email').hasError('email')&&userGroup.get('email').hasError('validatorStr')">
+                        不能包含（#$%^&*）特殊字符
+                    </div>
+
                 </div>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">密码：</label>
-                <input type="password" class="form-control" id="password" [(ngModel)]="user.password" placeholder="Password" #password="ngModel" name="password" required minlength="6">
-                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
-                    <div *ngIf="password.errors.required">密码不能为空.</div>
-                    <div *ngIf="password.errors.minlenght">密码长度不能小于6个字符.</div>
-
-
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" name="password" formControlName="password" class="form-control" id="password" placeholder="Password">
+                <div *ngIf="userGroup.get('password').invalid && (userGroup.get('password').dirty || userGroup.get('password').touched)" class="alert alert-danger">
+                    <div *ngIf="userGroup.get('password').hasError('required')">密码不能为空</div>
+                    <div *ngIf="userGroup.get('password').hasError('minlength')">密码长度不能小于6位</div>
+                    <div *ngIf="!userGroup.get('password').hasError('validatorPassword')">密码只能是字母组成</div>
                 </div>
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck">
                 <label class="form-check-label" for="exampleCheck">Check me out</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" (click)="login()" class="btn btn-primary">Submit</button>
+
         </form>
 
     </div>
