设置项目的布局

--- a/src/app/homes/homes.component.html
+++ b/src/app/homes/homes.component.html
@@ -1,8 +1,16 @@
-<p>
-    <!-- 共享的模块 -->
-    <!-- <user-info></user-info> -->
-</p>
-
-<p>
-    这里是段子！
-</p>
+<div class="container-fluit">
+    <div class="header col-12">
+        <app-top></app-top>
+    </div>
+    <div class="main col-12 clearfix">
+        <div class="menu col-3 float-left">
+            <app-menu></app-menu>
+        </div>
+        <div class="content col-9 float-left">
+            <app-content></app-content>
+        </div>
+    </div>
+    <div class="footer col-12">
+        <app-footer></app-footer>
+    </div>
+</div>
