--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,11 +28,10 @@
                 </div>
             </div>
             <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck">
+                <input type="checkbox" (click)="rememberUser($event)" class="form-check-input" id="exampleCheck">
                 <label class="form-check-label" for="exampleCheck">Check me out</label>
             </div>
             <button type="submit" (click)="login()" class="btn btn-primary">Submit</button>
-
         </form>
 
     </div>
