add userList and userDetail module

--- a/src/app/global-layout/menu/menu.component.html
+++ b/src/app/global-layout/menu/menu.component.html
@@ -1,11 +1,10 @@
 <nav class="nav flex-column">
-    <a class="nav-link" routerLinkActive="active" routerLink="/homes" href="#">homes</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/bashboard" href="#">dashboard</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/setcolor" href="#">setcolor</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/message" href="#">message</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/animation" href="#">animation</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/pipe" href="#">pipe</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/form" href="#">form</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="userList" href="#">用户列表</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="userDetail" href="#">setcolor</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="message" href="#">message</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="animation" href="#">animation</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="pipe" href="#">pipe</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="form" href="#">form</a>
     <a class="nav-link disabled" routerLinkActive="active" href="#">Disabled</a>
 
 </nav>
