在user detail 页面，增加点击 esc 按钮清空数据

--- a/src/app/global-layout/menu/menu.component.html
+++ b/src/app/global-layout/menu/menu.component.html
@@ -1,6 +1,6 @@
 <nav class="nav flex-column">
     <a class="nav-link" routerLinkActive="active" routerLink="userList" href="#">用户列表</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="userDetail" href="#">setcolor</a>
+    <a class="nav-link" routerLinkActive="active" routerLink="userDetail" href="#">用户详情</a>
     <a class="nav-link" routerLinkActive="active" routerLink="message" href="#">message</a>
     <a class="nav-link" routerLinkActive="active" routerLink="animation" href="#">animation</a>
     <a class="nav-link" routerLinkActive="active" routerLink="pipe" href="#">pipe</a>
