--- a/src/app/homes/user-list/user-list.component.html
+++ b/src/app/homes/user-list/user-list.component.html
@@ -1,10 +1,8 @@
 <div>
     <h3>
-        Inline Editing
+
         <small>
-      <a href="https://github.com/swimlane/ngx-datatable/blob/master/demo/basic/inline.component.ts" target="_blank">
-        Source
-      </a>
+        用户列表 
     </small>
     </h3>
     <ngx-datatable #mydatatable class="material" [headerHeight]="50" [limit]="5" [columnMode]="'force'" [footerHeight]="50" [rowHeight]="'auto'" [rows]="rows">
