--- a/src/app/homes/user-list/user-list.component.html
+++ b/src/app/homes/user-list/user-list.component.html
@@ -5,27 +5,14 @@
         用户列表 
     </small>
     </h3>
-    <ngx-datatable #mydatatable class="material" [headerHeight]="50" [limit]="5" [columnMode]="'force'" [footerHeight]="50" [rowHeight]="'auto'" [rows]="rows">
-        <ngx-datatable-column name="Name">
-            <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
-                <span title="Double click to edit" (dblclick)="editing[rowIndex + '-name'] = true" *ngIf="!editing[rowIndex + '-name']">
-          {{value}}
-        </span>
-                <input autofocus (blur)="updateValue($event, 'name', rowIndex)" *ngIf="editing[rowIndex+ '-name']" type="text" [value]="value" />
+    <ngx-datatable #mydatatable class="material" [headerHeight]="50" [limit]="5" [columnMode]="'force'" [footerHeight]="50" [rowHeight]="'auto'" [rows]="rows" [selected]="selected" [selectionType]="'single'" (activate)="onActivate($event)" (select)='onSelect($event)'>>
+        <ngx-datatable-column name="序号" width="80">
+            <ng-template let-rowIndex="rowIndex" let-row="row" ngx-datatable-cell-template>
+                <strong>{{rowIndex +1}}</strong>
             </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Gender">
-            <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-row="row" let-value="value">
-                <span title="Double click to edit" (dblclick)="editing[rowIndex + '-gender'] = true" *ngIf="!editing[rowIndex + '-gender']">
-          {{value}}
-        </span>
-                <select *ngIf="editing[rowIndex + '-gender']" (blur)="editing[rowIndex + '-gender'] = false" (change)="updateValue($event, 'gender', rowIndex)" [value]="value">
-          <option value="male">Male</option>
-          <option value="female">Female</option>
-        </select>
-            </ng-template>
-        </ngx-datatable-column>
-        <ngx-datatable-column name="Age">
+
+        <ngx-datatable-column name="name">
             <ng-template ngx-datatable-cell-template let-value="value">
                 {{value}}
             </ng-template>
