--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+// @import "../node_modules/zui/dist/css/zui.css"; 这种方式直接导入其它依赖的css
 .col-12,
 .col-11,
 .col-10,
