--- a/src/app/homes/user/user-update/user-update.component.html
+++ b/src/app/homes/user/user-update/user-update.component.html
@@ -1,8 +1,8 @@
 <form *ngIf="user">
     <div class="form-group">
         <label for="name">姓名</label>
-        <input type="text" disabled id='name' name="name" [(ngModel)]='user.name' class="form-control">
+        <input type="text" id='name' [(ngModel)]="user.name" name="name" class="form-control">
     </div>
-    <button type="submit" (click)="update()" class="btn btn-primary">修改</button>
+    <button class="btn btn-primary" (click)="update()">修改</button>
     <button type="submit" (click)="goBack()" class="btn btn-default">返回</button>
 </form>
