增加新的menu菜单

--- a/src/app/global-layout/menu/menu.component.html
+++ b/src/app/global-layout/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="nav flex-column">
+<!-- <nav class="nav flex-column">
     <a class="nav-link" routerLinkActive="active" routerLink="userList" href="#">用户列表</a>
     <a class="nav-link" routerLinkActive="active" routerLink="userDetail/1" href="#">用户详情</a>
     <a class="nav-link" routerLinkActive="active" routerLink="message" href="#">message</a>
@@ -7,4 +7,19 @@
     <a class="nav-link" routerLinkActive="active" routerLink="form" href="#">form</a>
     <a class="nav-link disabled" routerLinkActive="active" href="#">Disabled</a>
 
-</nav>
+</nav> -->
+
+
+<ul id="accordion" class="accordion">
+    <li>
+        <div class="link">用户 </div>
+        <ul class="submenu">
+            <li>
+                <a class="" routerLinkActive="active" routerLink="userList" href="#">用户列表</a>
+            </li>
+            <li>
+                <a class="" routerLinkActive="active" routerLink="userExplain" href="#">用户说明</a>
+            </li>
+        </ul>
+    </li>
+</ul>
