--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     background: #2d2c41;
     font-family: 'Open Sans', Arial, Helvetica, Sans-serif, Verdana, Tahoma;
@@ -5,10 +13,10 @@ body {
 
 ul {
     list-style-type: none;
-    margin: 0;
 }
 
 a {
+    color: #b63b4d;
     text-decoration: none;
 }
 
@@ -20,21 +28,21 @@ a {
 .accordion {
     width: 100%;
     max-width: 360px;
-    color: #231f20;
-    background: white;
+    margin: 30px auto 20px;
+    background: #FFF;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
 }
 
 .accordion .link {
-    color: #231f20;
     cursor: pointer;
     display: block;
-    padding: 15px 15px 15px 15px;
+    padding: 15px 15px 15px 42px;
+    color: #4D4D4D;
     font-size: 14px;
     font-weight: 700;
-    border-bottom: 1px solid #AAAAAA;
+    border-bottom: 1px solid #CCC;
     position: relative;
     -webkit-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
@@ -55,6 +63,7 @@ a {
     top: 16px;
     left: 12px;
     font-size: 18px;
+    color: #595959;
     -webkit-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
     transition: all 0.4s ease;
@@ -64,6 +73,14 @@ a {
     right: 12px;
     left: auto;
     font-size: 16px;
+}
+
+.accordion li.open .link {
+    color: #b63b4d;
+}
+
+.accordion li.open i {
+    color: #b63b4d;
 }
 
 .accordion li.open i.fa-chevron-down {
@@ -80,28 +97,26 @@ a {
 
 .submenu {
     display: none;
+    background: #444359;
     font-size: 14px;
 }
 
 .submenu li {
-    border-bottom: 1px solid #AAAAAA;
+    border-bottom: 1px solid #4b4a5e;
 }
 
 .submenu a {
-    color: #231f20;
     display: block;
     text-decoration: none;
+    color: #d9d9d9;
     padding: 12px;
-    padding-left: 15px;
+    padding-left: 42px;
     -webkit-transition: all 0.25s ease;
     -o-transition: all 0.25s ease;
     transition: all 0.25s ease;
 }
 
-.submenu a:hover,
-.submenu a.action,
-.accordion .link,
-.accordion .link:focus {
-    background: #231f20;
+.submenu a:hover {
+    background: #b63b4d;
     color: #FFF;
 }
