修改 fontawesome 字体图标使用

--- a/src/app/global-layout/menu/menu.component.html
+++ b/src/app/global-layout/menu/menu.component.html
@@ -12,7 +12,11 @@
 
 <ul id="accordion" class="accordion">
     <li>
-        <div class="link">用户 </div>
+        <div class="link">
+            <i class="fas fa-address-book"></i> 用户模块
+            <i class="fas fa-angle-left"></i>
+        </div>
+
         <ul class="submenu">
             <li>
                 <a class="" routerLinkActive="active" routerLink="userList" href="#">用户列表</a>
