--- a/src/app/global-layout/menu/menu.component.scss
+++ b/src/app/global-layout/menu/menu.component.scss
@@ -28,13 +28,14 @@ a {
 }
 
 .accordion .link {
+    padding-left: 20px;
     color: #231f20;
     cursor: pointer;
     display: block;
-    padding: 15px 15px 15px 15px;
+    padding: 15px 15px 15px 35px;
     font-size: 14px;
     font-weight: 700;
-    border-bottom: 1px solid #AAAAAA;
+    border-top: 1px solid #AAAAAA;
     position: relative;
     -webkit-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
@@ -54,23 +55,23 @@ a {
     position: absolute;
     top: 16px;
     left: 12px;
-    font-size: 18px;
+    font-size: 20px;
     -webkit-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
     transition: all 0.4s ease;
 }
 
-.accordion li i.fa-chevron-down {
+.accordion li i.fa-angle-left {
     right: 12px;
     left: auto;
-    font-size: 16px;
+    font-size: 20px;
 }
 
-.accordion li.open i.fa-chevron-down {
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
+.accordion li.open i.fa-angle-left {
+    -webkit-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    transform: rotate(270deg);
 }
 
 
